[package]
name = "cumulfreqtable"
version = "0.1.0"
edition = "2021"
description = "Binary Indexed Tree frequency table"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version="0.4" }
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false

[lib]
bench = false
