[package]
name = "cumulfreqtable"
version = "0.1.2"
edition = "2021"
description = "A Cumulative Frequency Table implemented with a Binary Indexed Tree"
license = "MIT"
repository = "https://github.com/bombela/cumulfreqtable"
authors = ["François-Xavier Bourlet <bombela@gmail.com>"]
documentation = "https://docs.rs/cumulfreqtable"
keywords = ["cumulative", "frequency", "table", "binary", "tree"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version="0.4" }
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false

[lib]
bench = false
